# sztuczna-inteligencja

./: pyproject.toml
lab1/: lab_1.html  lab_1.ipynb  lab_1.py
